--- a/Projet_POO_Jeu_de_la_vie.vcxproj
+++ b/Projet_POO_Jeu_de_la_vie.vcxproj
@@ -103,6 +103,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>C:\SFML-2.6.2\include</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -126,7 +127,27 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Projet_POO_Jeu_de_la_vie.cpp" />
+    <ClCompile Include="Cellule.cpp" />
+    <ClCompile Include="CelluleMorte.cpp" />
+    <ClCompile Include="CelluleVivante.cpp" />
+    <ClCompile Include="FenetreSFML.cpp" />
+    <ClCompile Include="Grille.cpp" />
+    <ClCompile Include="Jeu.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="RegleConway.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Cellule.h" />
+    <ClInclude Include="CelluleMorte.h" />
+    <ClInclude Include="CelluleVivante.h" />
+    <ClInclude Include="FenetreSFML.h" />
+    <ClInclude Include="Grille.h" />
+    <ClInclude Include="Jeu.h" />
+    <ClInclude Include="Regle.h" />
+    <ClInclude Include="RegleConway.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="testfichier.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
