Remplacement de RegleConway par RegleC et ajout de tests
- Ajout de la classe `RegleC` pour remplacer `RegleConway` et implémenter les règles du jeu de la vie.
- Suppression des fichiers `RegleConway.h` et `RegleConway.cpp`.
- Modification de `Cellule` pour utiliser `RegleC` dans `calculerEtatFutur`.
- Refactorisation de `Grille` avec une implémentation de grille torique.
- Améliorations de lisibilité dans `FenetreSFML` et `main.cpp`.
- Ajout d'un projet de tests unitaires avec `CppUnitTest` et d'un test pour vérifier la sauvegarde après plusieurs itérations.
- Ajout de fichiers précompilés (`pch.h`, `pch.cpp`) pour optimiser la compilation.
- Mise à jour des fichiers de solution et de projet pour inclure les nouveaux fichiers et configurations.
- Mise à jour des fichiers de configuration de la grille (`iterX.txt`) pour refléter les nouvelles règles.
- Refactorisation générale et ajout de commentaires pour améliorer la lisibilité et la maintenabilité.

--- a/Projet_POO_Jeu_de_la_vie.vcxproj
+++ b/Projet_POO_Jeu_de_la_vie.vcxproj
@@ -134,7 +134,7 @@
     <ClCompile Include="Grille.cpp" />
     <ClCompile Include="Jeu.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="RegleConway.cpp" />
+    <ClCompile Include="RegleC.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cellule.h" />
@@ -144,7 +144,7 @@
     <ClInclude Include="Grille.h" />
     <ClInclude Include="Jeu.h" />
     <ClInclude Include="Regle.h" />
-    <ClInclude Include="RegleConway.h" />
+    <ClInclude Include="RegleC.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="testfichier.txt" />
