modification des tests unitaires, version v143 des tools appliquée, grille torique finalisée(BONUS)

--- a/Projet_POO_Jeu_de_la_vie.test/Projet_POO_Jeu_de_la_vie.test.vcxproj
+++ b/Projet_POO_Jeu_de_la_vie.test/Projet_POO_Jeu_de_la_vie.test.vcxproj
@@ -45,7 +45,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v145</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
     <UseOfMfc>false</UseOfMfc>
   </PropertyGroup>
@@ -167,6 +167,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Projet_POO_Jeu_de_la_vie.vcxproj">
+      <Project>{2abdc360-0259-40da-a1cf-550f8500cc2e}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
