ajout modif code

--- a/Projet_POO_Jeu_de_la_vie.test/Projet_POO_Jeu_de_la_vie.test.vcxproj
+++ b/Projet_POO_Jeu_de_la_vie.test/Projet_POO_Jeu_de_la_vie.test.vcxproj
@@ -164,6 +164,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Projet_POO_Jeu_de_la_vie.test.cpp" />
+    <ClCompile Include="Projet_POO_Jeu_de_la_vie.test2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
