--- a/Projet_POO_Jeu_de_la_vie.test/Projet_POO_Jeu_de_la_vie.test.vcxproj.filters
+++ b/Projet_POO_Jeu_de_la_vie.test/Projet_POO_Jeu_de_la_vie.test.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Projet_POO_Jeu_de_la_vie.test2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
